hdone/objects/Product_Object__mdt.object
<CustomObject>
    <description>Objects for products. As of Winter 17 cannot use Dynamic API in Flows so using these settings</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Had to add field again. Supposed to be the IsActive but field was not made subscriber editable initially.</description>
        <inlineHelpText>Indicates if record is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <referenceTo>Object__mdt</referenceTo>
        <relationshipLabel>Product Objects</relationshipLabel>
        <relationshipName>Product_Objects</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product</description>
        <inlineHelpText>Product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product__mdt</referenceTo>
        <relationshipLabel>Product Objects</relationshipLabel>
        <relationshipName>Product_Objects</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Product Object</label>
    <pluralLabel>Product Objects</pluralLabel>
</CustomObject>